--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
     background-color: #EEE
 }
+
+@media only screen and (max-width: 810px) {
+    .headerImg {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
