--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,24 @@ body {
 }
 
 @media only screen and (max-width: 810px) {
-    .headerImg {
+    .mediaHeader {
         width: 100%;
         margin: 0 auto;
+    }
+
+    .mediaNav {
+        flex-direction: column;
+        font-size: 35px !important;
+    }
+
+    .mediaFooter {
+        width: 40px !important;
+        height: 40px !important;
+    }
+
+    .mediaHome {
+        height: 200px !important;
+        margin: 20px !important;
+        width: 90% !important;
     }
 }
